# Platfrom-API

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/core/: config.py
app/docs/decisions/: day02.md
